feat: setup multer to handle with image uploads

--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "devDependencies": {
     "@biomejs/biome": "2.0.6",
     "@types/express": "^5.0.3",
+    "@types/multer": "^1.4.13",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "express": "^5.1.0",
-    "mongoose": "^8.16.1"
+    "mongoose": "^8.16.1",
+    "multer": "^2.0.1"
   }
 }
